# math-mirrot-ai

./: .gitignore  README.md  pyproject.toml
experiments/: championship.py  championship_spec.md  drunk_queens_gambit.py  go_convergence.py  queens_gambit.py  queens_gambit_gated.py
math_mirror/: __init__.py  __main__.py  bootstrap.py  finetune.py  inference.py  jax_model.py  mirror.py  model.py  train.py  verifier.py
math_mirror/go/: __init__.py  amortized_king.py  board.py  colony.py  drunk.py  goer.py  king.py  mopl.py  pool.py  thinker.py  transcriber.py  valuer.py
math_mirror/mcp/: __init__.py  __main__.py  arxiv_source.py  config.py  devil_check.py  latex_parser.py  llm_court.py  mirror_train.py
paper/: main.tex
tests/: test_amortized_king.py  test_bootstrap.py  test_colony.py  test_devil_check.py  test_drunk.py  test_go.py  test_latex_parser.py  test_llm_court.py  test_model.py  test_sarsa.py  test_verifier.py
